# tops-lsp

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  all.sh  go.mod  go.sum  main.go
clang-plugin/: .clang-format  CMakeLists.txt  Diagnostics.cpp  Diagnostics.h  TranslationUnitWrapper.cpp  TranslationUnitWrapper.h  Types.h  URI.cpp  URI.h  decoder.cpp  library.cpp  library.h
clang-plugin/proto/: TopsAstProto.pb.cc  TopsAstProto.pb.h  TopsAstProto.proto
extension/: .vscodeignore  package-lock.json  package.json  tops-cpp.tmLanguage.json
extension/src/: extension.ts
lsp/: ast.go  ast_test.go  compile_commands.go  compile_commands_test.go  database.go  database_test.go  diagnostic.go  log.go  semantic_token.go  server.go  set.go  types.go  utils.go  utils_test.go
lsp/data/: data.pb.go  data.proto
parser/: CPP14Parser.g4  Cpp.g4  cpp_base_listener.go  cpp_lexer.go  cpp_listener.go  cpp_parser.go
test-files/: ast.h  ast.tops  input.cc  test.tops
